test/pass/io/write_then_read.lly
var f = File.open("io_test_file.txt", "w")
f.write("1234567890")
f.close()

f = File.open("io_test_file.txt", "r")
if f.readline().encode("error") != "1234567890":
    stderr.print("Failed.")
