test/fail/io/write_to_closed.lly
#[
IOError: IO operation on closed file.
Traceback:
    from [C]: in file::write
    from write_to_closed.lly:10: in __main__
]#

var f = file::open("io_test_file.txt", "w")
f.close()
f.write("1234")
